--- a/relationship-css/index.html
+++ b/relationship-css/index.html
@@ -18,7 +18,7 @@
 		<section>
 			<header>About Us</header>
 
-			<img src="/class03-materials/relationship-css/logo.png" alt="leon">
+			<img src="/relationship-css/logo.png" alt="leon">
 			
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quod laboriosam consequuntur architecto repudiandae dicta consectetur sed quia quo nostrum nihil eum magnam ipsum illo maxime fugit. Ducimus, aperiam amet? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni impedit neque odit sapiente molestias consectetur adipisci amet, maxime totam quas iure tenetur facere consequuntur consequatur nihil in eius ullam corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi quibusdam vero officia inventore cum veritatis aut, quos vel quasi velit laborum asperiores, mollitia eaque impedit optio necessitatibus illum tempore! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 			</p>
