--- a/relationship-css/index.html
+++ b/relationship-css/index.html
@@ -10,7 +10,7 @@
 		<header>Learn With Leon & Friends</header>
 		<nav>
 			<ul>
-				<li><a href="/">About Us</a></li>
+				<li><a href="/">About US</a></li>
 				<li><a href="/">Portfolio</a></li>
 			</ul>
 		</nav>
